paperless/CiliumNetworkPolicy-paperless-fqdn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-fqdn
  namespace: paperless
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toFQDNs:
        - matchName: oauth2.googleapis.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
